--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Home</a></li>
+				<li><a href="#">Contacto</a></li>
+				<li><a href="#">Donde estamos</a></li>
+				<li><a href="#">Productos</a></li>
+				<li><a href="#">Ayuda</a></li>
 			</ul>
 		</nav>
 	</header>
 	<hgroup><h1>Hola soy un titulo!</h1></hgroup>
 	<div class="cuadrado">
-		<a href="">hola</a>
 		<a href="#"><i class="fab fa-facebook-square"></i></a><br><p>Danos un me gusta en facebook!</p>
 	</div>
 </body>
